fixed navbar and spacing

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    line-height: 180%;
 }
 
 h1{
@@ -37,9 +38,6 @@ h6{
 p{
     font-size: 16px;
 }
-
-/* Accessibilityf features */
-
 
 table{
     border-collapse: collapse;
